[package]
name = "waah_bot"
version = "0.1.0"
authors = ["Stuart <stu@reilly-family.co.uk>"]
edition = "2018"

[dependencies]
config = { version = "0.10", default-features = false, features = ["toml"]}
directories = "2.0.2"
thiserror = "1.0.15"
serde = "1.0"
serde_derive = "1.0"
secstr = { version = "0.4.0", features = ["serde"] }
serenity = "0.8"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls", "blocking"] }
rand = "0.7.3"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["serde"] }
fern = "0.6.0"
